logo margin fix to remove horizontal scrollbar

--- a/nexusframework/css/framework.css
+++ b/nexusframework/css/framework.css
@@ -1477,6 +1477,9 @@ background-image: -webkit-gradient(
 }
 .nxs-logo span.title 										{ font-size: 30px; line-height: 1.5em; display: block; }
 .nxs-logo span.subtitle 									{ font-size: 20px; line-height: 1.2em; display: block; }
+.nxs-logo .nxs-icon-right,
+.nxs-logo .nxs-icon-left									{ margin: 0px; }
+
 
 /* BIO 
 ------------------------------------------------------------------------------------------ */
@@ -4330,15 +4333,4 @@ sub {
 fieldset
 {
 	width: 100%;
-}
-
-#nxs-widget-passwordidentifier input[type="submit"]
-{
-	background-color: #000;
-  color:#fff;
-  border: 0;
-  margin: 0;
-  height: 33px;
-  padding: 0px 6px 6px 6px;
-  cursor: pointer;
 }
